# Django_board

./: .gitignore  db.sqlite3  pyproject.toml
django_board/: asgi.py  settings.py  urls.py  wsgi.py
templates/: create_post.html  delete.html  edit_post.html  header.html  home.html  show_post.html
templates/todolist/: base.html  create_post.html  delete.html  discussion.html  edit_post.html  home.html  show_post.html  users_app.html
templates/user/: edit_user.html  profile_show.html
todolist/: admin.py  forms.py  models.py  urls_tdl.py  views.py  views_class.py
todolist/migrations/: 0001_initial.py  0002_post_content.py  0002_post_user_comments.py  0003_comments_created_alter_comments_post.py  0004_tag_post_tags.py  0005_alter_post_options.py
user/: admin.py  models.py  urls_user.py
user/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_table.py  0003_user_profile_picture.py
