[tool.poetry]
name = "django-board"
version = "0.1.0"
description = ""
authors = ["Wasil P <it.dzemidok@gmail.com>"]
readme = "README.md"
packages = [{include = "django_board"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.1"
faker = "^18.10.1"
django-crispy-forms = "^2.0"
crispy-bootstrap5 = "^0.7"
static = "^1.1.1"
pillow = "^9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
